<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7d2f4ef"
    android:padding="@dimen/dialog_body">


    <TextView
        android:id="@+id/save_position"
        android:textColor="#f9171b2e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingBottom="@dimen/padding_between"
        android:paddingTop="@dimen/padding_between"
        android:text="@string/guardar_esta_ubicacion"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/save_position"
        android:layout_marginBottom="@dimen/padding_between"
        android:layout_marginTop="@dimen/padding_between"
        android:background="#C8C9CB" />

    <LinearLayout
        android:id="@+id/ContenedorEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_padding"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/ubicacion_nombre"
            android:inputType="textPersonName"
            android:padding="@dimen/edit_text_padding"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/input_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_between"
            android:layout_marginTop="@dimen/normal_padding"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/descripcion_nombre"
            android:inputType="textMultiLine"
            android:padding="@dimen/edit_text_padding"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ContenedorEditText"
        android:layout_marginTop="10dp"
        android:layout_weight="5"
        android:background="#C8C9CB" />

    <ImageButton
        android:id="@+id/btCamera"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/save_position"
        android:layout_below="@+id/divider2"
        android:background="@drawable/camera50px"
        android:contentDescription="@string/camara" />

    <ImageButton
        android:id="@+id/btnGaleria"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/save_position"
        android:layout_below="@+id/divider2"
        android:background="@drawable/galeria"
        android:contentDescription="@string/galeria" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerGaleria"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/ContenedorEditText"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/divider"
        android:visibility="invisible">

    </android.support.v7.widget.RecyclerView>

</RelativeLayout>