<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="100dp"
        android:layout_height="115dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/photo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="100dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:text="@string/nombre"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:ems="10"
            android:text="@string/descripcion"
            android:textAlignment="viewStart"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="15sp" />

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="130dp"
        android:layout_weight="1"
        android:background="#C8C9CB" />


</RelativeLayout>